--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,4 +1,3 @@
-
 project_id = "hulnpsulovzyqcmroxir"
 
 [api]
@@ -9,7 +8,6 @@ extra_search_path = ["public"]
 max_rows = 1000
 
 [db]
-enabled = true
 port = 54322
 shadow_port = 54320
 major_version = 15
@@ -23,7 +21,7 @@ max_client_conn = 100
 
 [realtime]
 enabled = true
-ip_version = "ipv4"
+ip_version = "IPv4"
 
 [studio]
 enabled = true
@@ -43,9 +41,6 @@ file_size_limit = "50MiB"
 [auth]
 enabled = true
 additional_redirect_urls = ["https://9df9fce3-3938-41fe-9b5b-d6d3b7ef4c4f.lovableproject.com/"]
-external_email_enabled = true
-external_phone_enabled = true
-external_sms_enabled = true
 
 [auth.email]
 enable_signup = true
